<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edt_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_website"/>

    <Button
        android:id="@+id/btn_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openWebsite"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_location"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/open_location"/>

    <EditText
        android:id="@+id/edt_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_share"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/share_text"/>
</LinearLayout>